syntax = "proto3";

package plugin;

option go_package = "github.com/schumann-it/dehydrated-api-go/proto/plugin";

// Plugin service definition
service Plugin {
  // Initialize initializes the plugin with configuration
  rpc Initialize(InitializeRequest) returns (InitializeResponse) {}
  
  // EnrichDomainEntry enriches a domain entry with additional information
  rpc EnrichDomainEntry(EnrichDomainEntryRequest) returns (EnrichDomainEntryResponse) {}
  
  // Close closes the plugin
  rpc Close(CloseRequest) returns (CloseResponse) {}
}

// InitializeRequest contains initialization parameters
message InitializeRequest {
  string cert_dir = 1;
  string base_dir = 2;
  map<string, string> config = 3;
}

// InitializeResponse contains initialization result
message InitializeResponse {
  bool success = 1;
  string error = 2;
}

// DomainEntry represents a domain entry
message DomainEntry {
  string domain = 1;
  repeated string alternative_names = 2;
  bool enabled = 3;
  map<string, string> metadata = 4;
}

// EnrichDomainEntryRequest contains a domain entry to enrich
message EnrichDomainEntryRequest {
  DomainEntry entry = 1;
}

// EnrichDomainEntryResponse contains the enriched domain entry
message EnrichDomainEntryResponse {
  DomainEntry entry = 1;
  bool success = 2;
  string error = 3;
}

// CloseRequest is empty
message CloseRequest {}

// CloseResponse contains close result
message CloseResponse {
  bool success = 1;
  string error = 2;
} 